--- a/Kurs-3/Vorlage Kurs3.tex
+++ b/Kurs-3/Vorlage Kurs3.tex
@@ -6,10 +6,11 @@
 \kursnummer{3}
 \kursname{Sensoren}
 
-\teilnehmer{I}  {Max}{Mustermann}{1245745}{utbfa}{utbfa@student.kit.edu}
-\teilnehmer{II} {Max}{Mustermann}{1245345}{utbfa}{utbfa@student.kit.edu}
-\teilnehmer{III}{Max}{Mustermann}{1245345}{utbfa}{utbfa@student.kit.edu}
-\teilnehmer{IV} {Max}{Mustermann}{1245345}{utbfa}{utbfa@student.kit.edu}
+\teilnehmer{I}  {Andrej}{Rode}{1715677}{ucdqb}{andrej.rode@student.kit.edu}
+\teilnehmer{II} {Sarangan}{Selvalingam}{1245345}{utbfa}{utbfa@student.kit.edu}
+\teilnehmer{III}{Lukas}{Fregien}{1245345}{utbfa}{utbfa@student.kit.edu}
+%Hier noch alle Mtr-Nr. einfügen!
+%\teilnehmer{IV} {Max}{Mustermann}{1245345}{utbfa}{utbfa@student.kit.edu}
 
 \begin{document}
 
